# rog

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  README_CN.md  build.rs  create_configmap.sh  full_config_example.toml  rancher-deployment-demo.yaml  todo.md
.github/workflows/: rust.yml
docs/: rogv2_implementation.md
proto/: rog.proto  rog2.proto  rog_reverse.proto
src/: block.rs  connector.rs  consts.rs  def.rs  listener.rs  main.rs  object.rs  proto.rs  router.rs  stream.rs  test.rs  test_tcp_buffer.rs  util.rs
src/connector/: block.rs  grpc.rs  mod.rs  pb_http.rs  pb_tcp.rs  rev_grpc.rs  rogv2.rs  tcp.rs
src/def/: config.rs  mod.rs
src/host/: mod.rs  socks.rs  socks5.rs  tcp.rs
src/listener/: adaptive.rs  auto.rs  grpc.rs  htss5.rs  http.rs  mod.rs  pb_http.rs  pb_tcp.rs  rev_grpc.rs  rogv2.rs  socks5.rs  tcp.rs
src/object/: config.rs  mod.rs  raw_udp.rs  tcp.rs  udp.rs
src/proto/: v1.rs  v2.rs
src/router/: consts.rs  data.rs  default_router.rs  matcher.rs  mod.rs  resolver.rs  router.rs  test.rs  util.rs
src/router/matcher/: cidr.rs  def.rs  mod.rs  regex.rs  test.rs  util.rs
src/stream/: buffered.rs  grpc_client.rs  grpc_server.rs  grpc_udp_client.rs  grpc_udp_server.rs  mod.rs  pb_http_client.rs  pb_http_h3_client.rs  pb_http_h3_udp_client.rs  pb_http_server.rs  pb_http_udp_client.rs  pb_http_udp_server.rs  pb_tcp_client.rs  pb_tcp_server.rs  pb_tcp_udp_client.rs  pb_tcp_udp_server.rs  rev_grpc_client.rs  rev_grpc_server.rs  rev_grpc_udp_client.rs  rev_grpc_udp_server.rs  rogv2_client.rs  rogv2_server.rs  tcp.rs  udp.rs
src/util/: crypto.rs  grpc_transport.rs  mod.rs  parse.rs  pb_http.rs  socks5.rs  tcp_frame.rs
src/util/socks5/: client_hello.rs  confirm.rs  mod.rs  parse_util.rs  parser.rs  request.rs  server_hello.rs
