[package]
name = "rog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
#anyhow = "1.0.79"
#clap = { version = "4.4.18", features = ["derive", "cargo"] }
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
toml = "0.8.19"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
async-trait = "0.1.83"
futures = "0.3.31"
prost = "0.13.5"
url = "2.5.3"
reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
ipnet = "2.11.0"
regex = "1.11.1"
ipnetwork = "0.21.1"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["dns-over-https-rustls"] }
#hickory-client = { version = "0.24.2", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-https"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
#tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.12.3"
