[package]
name = "rog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
log = "0.4.20"
#anyhow = "1.0.79"
#clap = { version = "4.4.18", features = ["derive", "cargo"] }
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
toml = "0.8.19"
tonic = { version = "0.14.2", features = ["tls-ring", "tls-webpki-roots"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
async-trait = "0.1.83"
futures = "0.3.31"
url = "2.5.3"
reqwest = { version = "0.12.15", default-features = false, features = [] }
ipnet = "2.11.0"
regex = "1.11.1"
ipnetwork = "0.21.1"
hickory-resolver = { version = "0.25.2", features = [] }
#hickory-client = { version = "0.24.2", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-https"] }
#uuid = { version = "1.16.0", features = ["v4", "serde"] }
#tokio-stream = "0.1.17"
mimalloc = { version = "0.1", default-features = false }


[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
lto = true
strip = "symbols"